--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "x-paginator",
+  "name": "xpager",
   "version": "1.0.0",
   "description": "a simple paginator support ajax request and array paging.",
   "scripts": {
     "build": "rollup --config",
-    "buildesm2015": "rollup --config rollup.config.esm2015.mjs",
-    "publish": "npm publish"
+    "buildesm2015": "rollup --config rollup.config.esm2015.mjs"
   },
-  "module": "dist/xpager/esm2015/xpager.mjs",
-  "typings": "dist/xpager/lib/index.d.ts",
+  "module": "dist/esm2015/xpager.mjs",
+  "types": "dist/lib/index.d.ts",
   "type": "module",
   "files": [
-    "dist/"
+    "dist",
+    "README.md",
+    "LICENSE"
   ],
   "private": false,
   "keywords": [
